# django-admin-search-fields

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements-dev.txt  setup.cfg
django_admin_search_fields/: admin.py  apps.py
django_admin_search_fields/static/django_admin_search_fields/: search.css  search.js
django_admin_search_fields/templates/django_admin_search_fields/: change_list.html  search_form.html
django_admin_search_fields/templatetags/: dasf_tags.py
test_project/: settings.py  wsgi.py
test_project/app/: admin.py  models.py
test_project/app/migrations/: 0001_initial.py
test_project/fixtures/: data.json
